--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -1,8 +1,14 @@
 {
-   "hello":"Ciao",
    "sellerHome": "Home Revendeur",
+   "seller": "Revendeur",
+   "customer": "Client",
    "tickets": "Billets",
    "campaigns": "Campagnes",
+   "zeroCampaigns": "Demandez à vos clients de s'inscrire à Try2Win et d'enregistrer des billets supplémentaires.",
    "coupons": "Bons",
-   "zeroCoupons": "Allez dans un restaurant et gagnez des bons!"
+   "zeroCoupons": "Allez dans un restaurant et gagnez des bons!",
+   "readQRCode": "Lisez un code QR pour créer un ticket, appuyez sur l'image ci-dessous",
+   "showQRCode": "Montrez votre code QR",
+   "titleScanQRCode": "Scannez le code QR",
+   "scanSomething": "Lire un code QR Try2Win"
 } 
