locale and signout widget created for possible reuse

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -1,5 +1,6 @@
 {
    "sellerHome": "Händler Home",
+   "customerHome": "Home",
    "seller": "Händler",
    "customer": "Kunde",
    "tickets": "Billette",
