--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,5 +1,6 @@
 {
    "sellerHome": "Seller Home",
+   "customerHome": "Home",
    "seller": "Seller",
    "customer": "Customer",
    "tickets": "Tickets",
