--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -1,5 +1,6 @@
 {
    "sellerHome": "Home Revendeur",
+   "customerHome": "Home",
    "seller": "Revendeur",
    "customer": "Client",
    "tickets": "Billets",
