--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -1,5 +1,6 @@
 {
    "sellerHome": "Home Esercente",
+   "customerHome": "Home",
    "seller": "Esercente",
    "customer": "Cliente",
    "tickets": "Biglietti",
